# tui-rs

./: Cargo.toml
examples/: text_input.rs
examples/text_input/: Cargo.toml
examples/text_input/src/: main.rs
src/: lib.rs  stdlib_utils.rs  terminal.rs
src/interactive_form/: macro_impl.rs  macro_test.rs  mod.rs  test_macro.rs
src/widgets/: crossterm_interactive_widget.rs  interactive_widget_state.rs  mod.rs
src/widgets/text_input/: crossterm_interactive.rs  interactive.rs  mod.rs  state.rs  widget.rs
tui-rs-macros/: Cargo.toml
tui-rs-macros/src/: def_struct.rs  interactive_form_impl.rs  lib.rs  test.rs
